# modern-modbus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test-write-multiple.sh  write-multiple.hex
core/: CMakeLists.txt  check_consistency.c  parse_cmd.c  respond.c  stringify.c  utils.c  write_cmd.c
example/: main.cpp
include/: modern_modbus_core.h  modern_modbus_tcp.h  modern_modbus_tcp_server.h
src/: Frame.cpp  Frame.h  FrameReader.cpp  FrameReader.h  ModbusError.cpp  ModbusError.h  ModbusTCPServer.cpp  ModbusTCPServer.h  ModbusTCPSocket.cpp  ModbusTCPSocket.h  Responder.cpp  Responder.h  mbutils.h
tcp/: CMakeLists.txt  stringify.c  tcp_parse.c  tcp_response.c
tcp_server/: CMakeLists.txt  Responder.cpp  Responder.h  Socket.cpp  Socket.h  TCPServer.cpp  mb_exceptions.h
